crates/gpui-form-derive/tests/ui/custom_component_missing_shape_and_state.rs
use gpui_form_derive::GpuiForm;

#[derive(GpuiForm)]
struct Demo {
    #[gpui_form(component(custom(component = crate::widgets::TagsInput)))]
    field: String,
}

fn main() {}
